# superbird

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
classifier/: __init__.py  baseten_model.py  local_model.py  router.py
scripts/: download_checkpoint.py  prepare_cub200.py  train_baseten.py  train_local.py
truss_fallback/: config.yaml
truss_fallback/model/: model.py
truss_train/: config.py  train.py  train.sh
